# OpenGLCppObjects

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/test/: .test.cpp.swp  test.cpp  text.cpp
lib/: CMakeLists.txt
lib/include/: 3DBox.h  3DColor.h  3DLight.h  3DMaterial.h  3DShape.h  3DTexture.h
lib/source/: 3DBox.cpp  3DColor.cpp  3DLight.cpp  3DMaterial.cpp  3DShape.cpp  3DTexture.cpp
